--- a/us.johnholbrook.vextm.sdPlugin/pi/pi.html
+++ b/us.johnholbrook.vextm.sdPlugin/pi/pi.html
@@ -4,15 +4,44 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="sdpi.css">
         <script src="pi.js"></script>
-        <style>
-            #reconnect-button{
-                /* display: none; */
-            }
-        </style>
     </head>
     <body>
         <div class="sdpi-wrapper">
-            <hr>
+
+            <div class="sdpi-heading" id="action-settings">Action Settings</div>
+
+            <div class="sdpi-item" id="display-select-wrapper">
+                <div class="sdpi-item-label">Display</div>
+                <select id="display-select" class="select sdpi-item-value">
+                    <option value="1">None</option>
+                    <option value="2" selected>Intro</option>
+                    <option value="3">In-Match</option>
+                    <option value="4">Saved Match Results</option>
+                    <option value="5">Rankings</option>
+                    <option value="6">Logos</option>
+                    <option value="7">Alliance Selection</option>
+                    <option value="8">Elim. Bracket</option>
+                    <option value="9">Skills Rankings</option>
+                    <option value="12">Slides</option>
+                    <option value="13">Schedule</option>
+                    <option value="15">Inspection</option>
+                </select>
+            </div>
+
+            <div id="field-select-wrapper">
+                <div class="sdpi-item">
+                    <div class="sdpi-item-label">Field ID</div>
+                    <input type="number" class="sdpi-item-value" id="field-id-input" value=1>
+                </div>
+
+                <div class="sdpi-item">
+                    <details class="message info">
+                        <summary>Field IDs start at 1 and increase from there, and are unique across the entire tournament.</summary>
+                    </details>
+                </div>
+            </div>
+
+            <div class="sdpi-heading">Global Settings</div>
 
             <div class="sdpi-item">
                 <div class="sdpi-item-label">Server Addr</div>
@@ -40,23 +69,7 @@
                 <button class="sdpi-item-value" id="reconnect">RECONNECT</button>
             </div>
 
-            <div class="sdpi-item" id="display-select-wrapper">
-                <div class="sdpi-item-label">Display</div>
-                <select id="display-select" class="select sdpi-item-value">
-                    <option value="1">None</option>
-                    <option value="2" selected>Intro</option>
-                    <option value="3">In-Match</option>
-                    <option value="4">Saved Match Results</option>
-                    <option value="5">Rankings</option>
-                    <option value="6">Logos</option>
-                    <option value="7">Alliance Selection</option>
-                    <option value="8">Elim. Bracket</option>
-                    <option value="9">Skills Rankings</option>
-                    <option value="12">Slides</option>
-                    <option value="13">Schedule</option>
-                    <option value="15">Inspection</option>
-                </select>
-            </div>
+            
         </div>
     </body>
 </html>
