Add options to "Match Info" action
Choose to show one of 4 pieces of info, or all 4 at once

--- a/us.johnholbrook.vextm.sdPlugin/pi/pi.html
+++ b/us.johnholbrook.vextm.sdPlugin/pi/pi.html
@@ -41,6 +41,19 @@
                 </div>
             </div>
 
+            <div id="info-select-wrapper">
+                <div class="sdpi-item">
+                    <div class="sdpi-item-label">Info to show</div>
+                    <select name="" id="info-select" class="select sdpi-item-value">
+                        <option value="1" selected>All</option>
+                        <option value="2">Match Number</option>
+                        <option value="3">Current Field</option>
+                        <option value="4">Match State</option>
+                        <option value="5">Time Remaining</option>
+                    </select>
+                </div>
+            </div>
+
             <div class="sdpi-heading">Global Settings</div>
 
             <div class="sdpi-item">
