Show field names in PI for queue skils actions
(rather than making the user figure out the field ID themselves)

--- a/us.johnholbrook.vextm.sdPlugin/pi/pi.html
+++ b/us.johnholbrook.vextm.sdPlugin/pi/pi.html
@@ -30,14 +30,10 @@
 
             <div id="field-select-wrapper">
                 <div class="sdpi-item">
-                    <div class="sdpi-item-label">Field ID</div>
-                    <input type="number" class="sdpi-item-value" id="field-id-input" value=1>
-                </div>
-
-                <div class="sdpi-item">
-                    <details class="message info">
-                        <summary>Field IDs start at 1 and increase from there, and are unique across the entire tournament.</summary>
-                    </details>
+                    <div class="sdpi-item-label">Field</div>
+                    <select name="" id="field-id-input" class="select sdpi-item-value">
+                        <option value="" selected>Retrieving field names...</option>
+                    </select>
                 </div>
             </div>
 
