Fix text layout bug in PI

--- a/us.johnholbrook.vextm.sdPlugin/pi/pi.html
+++ b/us.johnholbrook.vextm.sdPlugin/pi/pi.html
@@ -68,9 +68,7 @@
             </div>
 
             <div class="sdpi-item">
-                <details class="message info">
-                    <summary>Field set IDs start at 1 and count up from there if you have more than 1 field set.</summary>
-                </details>
+                <div class="sdpi-item-value">Field set IDs start at 1 and count up from there if you have more than 1 field set.</div>
             </div>
 
             <div class="sdpi-item" id="reconnect-button">
